Import of RPETTETT/Bio-Das-ProServer-2.6.tar.gz from CPAN.
gitpan-cpan-distribution: Bio-Das-ProServer
gitpan-cpan-version:      2.6
gitpan-cpan-path:         RPETTETT/Bio-Das-ProServer-2.6.tar.gz
gitpan-cpan-author:       RPETTETT
gitpan-cpan-maturity:     released

--- a/eg/proserver.ini
+++ b/eg/proserver.ini
@@ -38,6 +38,7 @@ state         = off
 transport     = getzc
 host          = getzserver.example.com
 port          = 20204
+example_segment = INSR_HUMAN
 
 [image]
 adaptor       = image
