--- a/eg/proserver.ini
+++ b/eg/proserver.ini
@@ -1,15 +1,45 @@
+;[general] section contains server-wide parameters
+; some of which may be overridden by options given on the command-line at server-start
 [general]
-prefork=5
+
+; maxclients - the number of POE::Sessions available for handling requests (similar to deprecated 'prefork')
 maxclients=10
+
+; port - Network port to listen on
 port=9000
+
+; hostname - name of interface to listen on
 hostname=localhost
+
+; response_hostname - hostname forced in responses
 response_hostname=das.example.com
+
+; response_port - port forced in responses
 response_port=80
-;response_protocol=https
+
+; response_protocol - protocol forced in responses
+;response_protocol=http
+
+; response_baseuri - URI prefix forced in responses
 ;response_baseuri=/frontend
+
+; oraclehome - ORACLE_HOME environment variable set centrally
 ;oraclehome=/usr/local/oracle
+
+; ensemblhome - ENSEMBL_HOME environment variable set centrally
 ;ensemblhome=/usr/local/ensembl
+
+; coordshome - the directory containing co-ordinate systems XML
+;coordshome=/data/coordinates/
+
+; styleshome - the directory containing default stylesheet XML
+;styleshome=/data/stylesheets/
+
+; pidfile - file to write server parent process id to
 ;pidfile=eg/mypid.pid
+
+; maintainer - email address for the server administrator
+maintainer=das@example.com
 
 [mysimple]
 adaptor       = simple
@@ -17,11 +47,14 @@ state         = on
 transport     = file
 ;mapmaster     = http://foo.com/mysimple_reference
 description   = Simple example source
+doc_href      = http://my.homepage.com
 filename      = /path/to/genelist.txt
 baseurl       = http://www.example.org/datascript?id=
 type          = gene
 feature_query = field0 lceq "%s"
 unique        = 1
+; Coordinate system and test range:
+coordinates   = Ensembl,Gene_ID -> ENSG00000139618
 
 [gensat]
 adaptor       = gensat
@@ -38,7 +71,7 @@ state         = off
 transport     = getzc
 host          = getzserver.example.com
 port          = 20204
-example_segment = INSR_HUMAN
+coordinates   = uniprot,protein sequence -> INSR_HUMAN
 
 [image]
 adaptor       = image
