--- a/eg/proserver.ini
+++ b/eg/proserver.ini
@@ -64,34 +64,30 @@ filename      = eg/data/mysimple.txt
 baseurl       = http://www.example.org/datascript?id=
 type          = gene
 feature_query = field0 lceq "%s"
+fid_query     = field3 lceq "%s"
+gid_query     = field4 lceq "%s"
 ;unique        = 1
 ; Coordinate system and test range:
 coordinates   = Ensembl,Gene_ID -> SEG1
 
-[swissprot]
-adaptor       = swissprot
-state         = off
-transport     = getzc
-host          = getzserver.example.com
-port          = 20204
-coordinates   = uniprot,protein sequence -> INSR_HUMAN
-
-[interpro]
-adaptor       = interpro
+[mygetz]
+adaptor       = mygetz
 state         = off
 transport     = getz
 getz          = /usr/local/bin/getz
+coordinates   = uniprot,protein sequence -> INSR_HUMAN
 
-[ncbi33]
-adaptor       = agp
+[mysimpledb]
+adaptor       = simpledb
 state         = off
 transport     = dbi
+driver        = mysql
 host          = localhost
 port          = 3306
 username      = mydbuser
 dbname        = mydbname
 password      = mydbpass
-tablename     = tmp_agp_ncbi33
+dbtable       = my_data_table
 
 [myembl]
 state         = off
@@ -113,24 +109,4 @@ dbname        = proserver_hydra    # dbi: database name
 host          = dbhost.example.com # dbi: database host
 username      = dbuser             # dbi: database username
 password      = dbpass             # dbi: database password
-
-[pfamAlign]
-adaptor       = pfamAlign
-state         = off
-transport     = dbi
-host          = pfam
-port          = 3306
-username      = pfam
-dbname        = pfamdev
-password      = mafp1
-
-[pdbStructure]
-adaptor       = pdbStructure
-state         = off
-transport     = dbi
-host          = pfam
-port          = 3306
-username      = pfam
-dbname        = pfam_20_0
-password      = mafp1
 
