--- a/eg/proserver.ini
+++ b/eg/proserver.ini
@@ -95,18 +95,24 @@ adaptor       = bioseq
 transport     = bioseqio
 filename      = /path/to/data/ECAPAH02.embl
 format        = embl
-index         = bdb           # optional (Bio::DB::Flat)
-dbname        = an_embl_db    # optional (Bio::DB::Flat)
-dbroot        = /tmp           # optional (Bio::DB::Flat)
+; Optional (for Bio::DB::Flat):
+index         = bdb
+dbname        = an_embl_db
+dbroot        = /tmp
 
 [hydra001]
 state         = off
-adaptor       = simpledb           # SourceAdaptor to clone
-hydra         = dbi                # Hydra implementation to use
-transport     = dbi                # transport for sourceadaptor (and probably hydra)
-basename      = hydra              # dbi: basename for db tables containing servable data
-dbname        = proserver_hydra    # dbi: database name
-host          = dbhost.example.com # dbi: database host
-username      = dbuser             # dbi: database username
-password      = dbpass             # dbi: database password
+; SourceAdaptor to clone:
+adaptor       = simpledb
+; Hydra implementation to use:
+hydra         = dbi
+; Transport for sourceadaptor (and probably hydra):
+transport     = dbi
+; dbi hydra- basename for db tables containing servable data:
+basename      = hydra
+; other dbi hydra details:
+dbname        = proserver_hydra
+host          = dbhost.example.com
+username      = dbuser
+password      = dbpass
 
