--- a/eg/proserver.ini
+++ b/eg/proserver.ini
@@ -60,15 +60,25 @@ state         = on
 transport     = file
 description   = Simple example source
 doc_href      = http://my.homepage.com
+; Properties for the 'simple' SourceAdaptor
 filename      = eg/data/mysimple.txt
 baseurl       = http://www.example.org/datascript?id=
-type          = gene
-feature_query = field0 lceq "%s"
-fid_query     = field3 lceq "%s"
-gid_query     = field4 lceq "%s"
-;unique        = 1
 ; Coordinate system and test range:
-coordinates   = Ensembl,Gene_ID -> SEG1
+coordinates   = GRCh_37,Chromosome,Homo sapiens -> X:1,100
+
+[mygff]
+adaptor       = file
+state         = on
+description   = An example source using a GFF file
+doc_href      = http://another.homepage.com
+; Properties for the 'file' SourceAdaptor to allow it to read GFF2 files
+filename      = eg/data/example.gff
+cols          = segment,method,type,start,end,score,ori,phase,note,note
+feature_query = field0 lceq %segment AND field4 >= %start AND field3 <= %end
+comment       = ^#
+separator     = \t|\s*;\s*
+; Coordinate system and test range:
+coordinates   = NCBIM_37,Chromosome,Mus musculus -> Y:1,100
 
 [mygetz]
 adaptor       = mygetz
